--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔥 我的超酷个人主页 🔥</title>
+    <title> 个人主页 </title>
     <!-- Tailwind CSS 快速构建样式 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 字体图标 -->
